test_regress/t/t_mem_slice_dtype_bad.out
%Error: t/t_mem_slice_dtype_bad.v:37:25: Operator AND not defined for logic[39:0]$[1:0] operands
                                       : ... note: In instance 't'
   37 |       assert ((addr[id] & way_mask) == 0);
      |                         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Warning-WIDTHTRUNC: t/t_mem_slice_dtype_bad.v:37:25: Operator AND expects 32 or 1 bits on the LHS, but LHS's ARRAYSEL generates 40 bits.
                                                    : ... note: In instance 't'
   37 |       assert ((addr[id] & way_mask) == 0);
      |                         ^
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Warning-WIDTHTRUNC: t/t_mem_slice_dtype_bad.v:37:25: Operator AND expects 32 or 1 bits on the RHS, but RHS's VARREF 'way_mask' generates 40 bits.
                                                    : ... note: In instance 't'
   37 |       assert ((addr[id] & way_mask) == 0);
      |                         ^
%Error: Exiting due to
